stock mgt screenshots

--- a/index.html
+++ b/index.html
@@ -449,53 +449,33 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                Technology stack: Back-end developed with PHP/MySQL for robust data management, and
-                                front-end
-                                built with JavaScript for a user-friendly interface.
-
-                            </li>
                         </ul>
                         <b>Benefits :</b>
                         <ul>
                             <li>
-                                Enhanced transparency: Streamlines the court process for complainants with clear and
-                                readily
-                                available information.
+                                Enhanced transparency
                             </li>
                             <li>
-                                Increased convenience: Eliminates the need to search for courtroom assignments, leading
-                                to a
-                                smoother experience.
+                                Increased convenience
                             </li>
                             <li>
-                                Reduced administrative workload: Automates causelist updates, freeing up courtroom
-                                personnel
-                                for other tasks.
+                                Reduced administrative workload
                             </li>
                         </ul>
                         <div class="row">
-                            <div class="col-lg-4">
-                                <img src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/login.png"
+                            <div class="col-lg-4 p-1">
+                                <img src="assets/imgs/stock-home.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/dashboard.png"
+                                <img src="assets/imgs/stock-addNewItem.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/add-form.png"
+                                <img src="assets/imgs/stock-login.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
-                            <div class="col-lg-4 p-1">
-                                <img src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/delete.png"
-                                    style="width: 100%;" alt="project screenshots ">
-                            </div>
-                            <div class="col-lg-4 p-1">
-                                <img src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/publish%20list.png"
-                                    style="width: 100%;" alt="project screenshots ">
-                            </div>
-
+                            
                         </div>
                         <a href="https://github.com/unmukt25/pub_rera_causelist">To checkout the source code click
                             here...</a>
