social media links

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" title="LinkedIn" href="#"><i
+                <li class="social-item"><a class="social-link text-light" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/unmukt-jain-543545232"><i
                             class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" title="Instagram" href="#"><i
+                <li class="social-item"><a class="social-link text-light" title="Instagram" target="_blank"  href="https://www.instagram.com/unmukt.mobile"><i
                             class="ti-instagram" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" title="GitHub" href="#"><i class="ti-github"
+                <li class="social-item"><a class="social-link text-light" title="GitHub" target="_blank" href="https://github.com/unmukt25/"><i class="ti-github"
                             aria-hidden="true"></i></a></li>
             </ul>
             <div class="header-content">
@@ -98,11 +98,11 @@
                     <li><span>Address</span> : Bhopal, Madhya Pradesh, India.</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" title="LinkedIn" href="#"><i class="ti-linkedin"
+                    <li class="social-item"><a class="social-link" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/unmukt-jain-543545232"><i class="ti-linkedin"
                                 aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" title="Instagram" href="#"><i class="ti-instagram"
+                    <li class="social-item"><a class="social-link" title="Instagram" target="_blank" href="https://www.instagram.com/unmukt.mobile"><i class="ti-instagram"
                                 aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" title="GitHub" href="#"><i class="ti-github"
+                    <li class="social-item"><a class="social-link" title="GitHub" target="_blank" href="https://github.com/unmukt25/"><i class="ti-github"
                                 aria-hidden="true"></i></a></li>
                 </ul>
             </div>
