--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Unmukt Jain Web Developer">
-    <meta name="author" content="Devcrud">
+    <meta name="author" content="Unmukt Jain Web Developer">
     <title>Unmukt Jain - Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
