screens & rem component

--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i
-            class="ti-shift-left-alt"></i> Components</a>
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/unmukt-jain-543545232"><i
-                            class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" title="Instagram" target="_blank"  href="https://www.instagram.com/unmukt.mobile"><i
-                            class="ti-instagram" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" title="GitHub" target="_blank" href="https://github.com/unmukt25/"><i class="ti-github"
+                <li class="social-item"><a class="social-link text-light" title="LinkedIn" target="_blank"
+                        href="https://www.linkedin.com/in/unmukt-jain-543545232"><i class="ti-linkedin"
                             aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" title="Instagram" target="_blank"
+                        href="https://www.instagram.com/unmukt.mobile"><i class="ti-instagram"
+                            aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" title="GitHub" target="_blank"
+                        href="https://github.com/unmukt25/"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>
             <div class="header-content">
                 <h4 class="header-subtitle">Hello, I am</h4>
                 <h1 class="header-title">Unmukt Jain</h1>
                 <h6 class="header-mono">Web Developer</h6>
-                <a target="_blank" href="assets/unmukt-cv.pdf" class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</a>
+                <a target="_blank" href="assets/unmukt-cv.pdf" class="btn btn-primary btn-rounded"><i
+                        class="ti-printer pr-2"></i>Print Resume</a>
             </div>
         </div>
     </header>
@@ -81,7 +82,8 @@
                     I am a self-motivated, quick learner, and enthusiastic professional seeking a position as a web
                     developer in the field of next-generation web development, specializing in crafting RESTful APIs.
                 </p>
-                <a target="_blank" href="assets/unmukt-cv.pdf" class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</a>
+                <a target="_blank" href="assets/unmukt-cv.pdf" class="btn btn-outline-danger"><i
+                        class="icon-down-circled2 "></i>Download My CV</a>
             </div>
             <div class="col-lg-3 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -98,12 +100,14 @@
                     <li><span>Address</span> : Bhopal, Madhya Pradesh, India.</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/unmukt-jain-543545232"><i class="ti-linkedin"
+                    <li class="social-item"><a class="social-link" title="LinkedIn" target="_blank"
+                            href="https://www.linkedin.com/in/unmukt-jain-543545232"><i class="ti-linkedin"
                                 aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" title="Instagram" target="_blank" href="https://www.instagram.com/unmukt.mobile"><i class="ti-instagram"
+                    <li class="social-item"><a class="social-link" title="Instagram" target="_blank"
+                            href="https://www.instagram.com/unmukt.mobile"><i class="ti-instagram"
                                 aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" title="GitHub" target="_blank" href="https://github.com/unmukt25/"><i class="ti-github"
-                                aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" title="GitHub" target="_blank"
+                            href="https://github.com/unmukt25/"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="col-lg-5 about-card">
@@ -388,28 +392,39 @@
                         </ul>
                         <div class="row">
                             <div class="col-lg-4">
-                                <img class="image-item" src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/login.png"
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/login.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/dashboard.png"
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/dashboard.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/add-form.png"
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/add-form.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/delete.png"
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/delete.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/publish%20list.png"
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/publish%20list.png"
+                                    style="width: 100%;" alt="project screenshots ">
+                            </div>
+                            <div class="col-lg-4 p-1">
+                                <img class="image-item"
+                                    src="https://raw.githubusercontent.com/unmukt25/pub_rera_causelist/main/user%20screens/causelist-live.png"
                                     style="width: 100%;" alt="project screenshots ">
                             </div>
 
                         </div>
-                        <a target="_blank" href="https://github.com/unmukt25/pub_rera_causelist">To checkout the source code click
+                        <a target="_blank" href="https://github.com/unmukt25/pub_rera_causelist">To checkout the source
+                            code click
                             here...</a>
                     </div>
                 </div><!-- end of blog wrapper -->
@@ -461,18 +476,18 @@
                         </ul>
                         <div class="row">
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="assets/imgs/stock-home.png"
-                                    style="width: 100%;" alt="project screenshots ">
+                                <img class="image-item" src="assets/imgs/stock-home.png" style="width: 100%;"
+                                    alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="assets/imgs/stock-addNewItem.png"
-                                    style="width: 100%;" alt="project screenshots ">
+                                <img class="image-item" src="assets/imgs/stock-addNewItem.png" style="width: 100%;"
+                                    alt="project screenshots ">
                             </div>
                             <div class="col-lg-4 p-1">
-                                <img class="image-item" src="assets/imgs/stock-login.png"
-                                    style="width: 100%;" alt="project screenshots ">
+                                <img class="image-item" src="assets/imgs/stock-login.png" style="width: 100%;"
+                                    alt="project screenshots ">
                             </div>
-                            
+
                         </div>
                         <a target="_blank" href="https://main.dtgq42p9nzx87.amplifyapp.com/">Live Demo...</a>
                     </div>
